[package]
name = "rustlody"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
rdkafka = { version = "0.25", features = ["cmake-build"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = "1.0.215"
stomp-rs = "0.0.8"
tokio = { version = "1", features = ["full"] }
sqlx = {version = "0.8", features = [ "runtime-tokio", "runtime-tokio-native-tls", "tls-native-tls", "macros", "mysql", "time" ] }
