[package]
name = "rustlody"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = "1.0.215"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "runtime-tokio-native-tls",
    "tls-native-tls",
    "macros",
    "mysql",
    "time",
] }
url = "2.2.2"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
ezsockets = "0.6.4"
async-trait = "0.1.52"
serde_json = "1.0.133"
